[gd_scene load_steps=9 format=2]

[ext_resource path="res://conversation/TypewriterEffect.gd" type="Script" id=1]
[ext_resource path="res://ui/Box_Dark_1.png" type="Texture" id=2]
[ext_resource path="res://conversation/DialogBox.gd" type="Script" id=3]
[ext_resource path="res://conversation/ConversationResource.gd" type="Script" id=4]
[ext_resource path="res://conversation/TypewriterTextField.gd" type="Script" id=5]
[ext_resource path="res://ui/DialogFontDefault.tres" type="DynamicFont" id=6]





[sub_resource type="TextFile" id=1]
resource_name = "<Initial name>"
script = ExtResource( 4 )
branches = [  ]

[sub_resource type="RichTextEffect" id=2]
script = ExtResource( 1 )

[node name="DialogBox" type="Popup"]
pause_mode = 2
margin_right = 648.0
margin_bottom = 312.0
script = ExtResource( 3 )
conversation = SubResource( 1 )

[node name="Background" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
texture = ExtResource( 2 )
patch_margin_left = 5
patch_margin_top = 10
patch_margin_right = 5
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextField" type="RichTextLabel" parent="Background"]
anchor_right = 1.0
anchor_bottom = 0.7
margin_left = 15.0
margin_top = 20.0
margin_right = -15.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/normal_font = ExtResource( 6 )
bbcode_enabled = true
scroll_active = false
custom_effects = [ SubResource( 2 ) ]
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="HBoxContainer" parent="Background"]
anchor_top = 0.756
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeIn" type="Tween" parent="."]

[node name="FadeOut" type="Tween" parent="."]
[connection signal="about_to_show" from="." to="." method="_on_DialogBox_about_to_show"]
[connection signal="tween_completed" from="FadeOut" to="." method="_on_FadeOut_completed"]
